--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,9 +24,10 @@
     "tsc": "tsc --init --pretty --jsx react"
   },
   "dependencies": {
-    "@burstjs/core": "^0.0.10",
-    "@burstjs/crypto": "^0.0.10",
-    "@burstjs/http": "^0.0.10",
+    "@burstjs/core": "^0.0.12",
+    "@burstjs/crypto": "^0.0.12",
+    "@burstjs/http": "^0.0.12",
+    "@burstjs/util": "^0.0.12",
     "@types/react-native-touch-id": "^4.0.1",
     "axios": "^0.18.0",
     "i18n-js": "^3.1.0",
