--- a/web/angular-wallet/src/tsconfig.spec.json
+++ b/web/angular-wallet/src/tsconfig.spec.json
@@ -1,18 +1,19 @@
 {
-    "extends": "../tsconfig.json",
-    "compilerOptions": {
-        "outDir": "../out-tsc/spec",
-        "types": [
-            "jasmine",
-            "node"
-        ]
-    },
-    "files": [
-        "test.ts",
-        "polyfills.ts"
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "../out-tsc/spec",
+    "types": [
+      "jasmine",
+      "node"
     ],
-    "include": [
-        "**/*.spec.ts",
-        "**/*.d.ts"
-    ]
+    "module": "commonjs"
+  },
+  "files": [
+    "test.ts",
+    "polyfills.ts"
+  ],
+  "include": [
+    "**/*.spec.ts",
+    "**/*.d.ts"
+  ]
 }
