--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -16,10 +16,11 @@
     "build-stats": "npm run build -- --dev --stats-json",
     "build-prod": "npm run build -- --prod",
     "build-prod-stats": "npm run build -- --prod --stats-json",
-    "test": "ng test",
+    "test": "jest",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "bundle-report": "webpack-bundle-analyzer dist/stats.json"
+    "bundle-report": "webpack-bundle-analyzer dist/stats.json",
+    "test:watch": "jest --watch"
   },
   "private": true,
   "dependencies": {
@@ -37,6 +38,8 @@
     "@angular/platform-browser": "^7.2.0",
     "@angular/platform-browser-dynamic": "^7.2.0",
     "@angular/router": "^7.2.0",
+    "@briebug/jest": "^1.3.1",
+    "@briebug/jest-schematic": "^1.6.0",
     "@burstjs/core": "^0.0.14",
     "@burstjs/crypto": "^0.0.14",
     "@burstjs/http": "^0.0.14",
@@ -65,6 +68,7 @@
     "lodash": "4.17.11",
     "lokijs": "^1.5.6",
     "moment": "2.22.2",
+    "ng-mocks": "^7.5.0",
     "ng2-charts": "1.6.0",
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "7.0.2",
@@ -84,17 +88,12 @@
     "@angular/language-service": "~7.2.0",
     "@angularclass/hmr": "^2.1.3",
     "@types/dragula": "^2.1.34",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "jest": "24.0.0",
+    "jest-preset-angular": "6.0.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
