--- a/mobile/package.json
+++ b/mobile/package.json
@@ -46,6 +46,7 @@
     "react-native-gesture-handler": "^1.2.1",
     "react-native-keychain": "^3.1.3",
     "react-native-localize": "^1.1.2",
+    "react-native-markdown-renderer": "^3.2.8",
     "react-native-picker-select": "^6.3.2",
     "react-native-qrcode-scanner": "^1.2.3",
     "react-native-svg": "^9.8.3",
