--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,10 +31,11 @@
     "tsc": "tsc --init --pretty --jsx react"
   },
   "dependencies": {
-    "@burstjs/core": "^0.1.1",
-    "@burstjs/crypto": "^0.1.1",
-    "@burstjs/http": "^0.1.1",
-    "@burstjs/util": "^0.1.1",
+    "@burstjs/core": "^0.4.0",
+    "@burstjs/crypto": "^0.4.0",
+    "@burstjs/http": "^0.4.0",
+    "@burstjs/util": "^0.4.0",
+    "@react-native-community/slider": "^2.0.0",
     "@types/d3-shape": "^1.3.1",
     "@types/react-native-svg-charts": "^5.0.2",
     "d3-shape": "^1.3.5",
@@ -46,6 +47,7 @@
     "react-native-keychain": "^3.1.3",
     "react-native-localize": "^1.1.2",
     "react-native-picker-select": "^6.3.2",
+    "react-native-qrcode-scanner": "^1.2.3",
     "react-native-svg": "^9.8.3",
     "react-native-svg-charts": "^5.3.0",
     "react-native-swipeout": "^2.3.6",
