--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-version-number')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-camera')
     implementation project(':@react-native-community_slider')
