--- a/mobile/ios/mobile/Info.plist
+++ b/mobile/ios/mobile/Info.plist
@@ -76,5 +76,7 @@
 		<string>BebasNeueBold.ttf</string>
 		<string>NotoSansThin.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera is needed for scanning QR codes</string>
 </dict>
 </plist>
