--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phoenix-burst-mobile-wallet",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha.0",
   "contributors": [
     "titanishu",
     "blankey1337"
@@ -54,6 +54,7 @@
     "react-native-svg-charts": "^5.3.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-touch-id": "^4.4.1",
+    "react-native-version-number": "^0.3.6",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
