--- a/mobile/android/settings.gradle
+++ b/mobile/android/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'mobile'
+rootProject.name = 'Phoenix'
 include ':react-native-version-number'
 project(':react-native-version-number').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-version-number/android')
 include ':@react-native-community_async-storage'
