--- a/mobile/package.json
+++ b/mobile/package.json
@@ -57,7 +57,8 @@
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-swipe-button": "^1.2.2"
   },
   "rnpm": {
     "assets": [
