--- a/lib/package.json
+++ b/lib/package.json
@@ -16,31 +16,31 @@
   "license": "Apache-2.0",
   "private": false,
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-typescript": "^7.1.0",
-    "@types/jest": "^24.0.12",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-typescript": "^7.7.2",
+    "@types/jest": "^24.0.23",
     "axios-mock-adapter": "^1.16.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.1.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "codecov": "^3.1.0",
+    "codecov": "^3.6.1",
     "custom-tslint-formatters": "^2.4.0",
-    "husky": "^3.0.5",
+    "husky": "^3.0.9",
     "jest": "^24.1.0",
     "jsdoc-babel": "^0.5.0",
-    "jsdoc-to-markdown": "^5.0.0",
-    "lerna": "^3.13.4",
+    "jsdoc-to-markdown": "^5.0.2",
+    "lerna": "^3.18.4",
     "regenerator-runtime": "^0.13.1",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.12.1",
-    "typedoc": "0.14.2",
+    "tslint": "^5.20.1",
+    "typedoc": "^0.15.2",
     "typedoc-plugin-external-module-name": "^2.0.0",
-    "typescript": "^3.3.1"
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "test": "jest",
