--- a/lib/packages/contracts/package.json
+++ b/lib/packages/contracts/package.json
@@ -44,6 +44,7 @@
     "readme": "jsdoc2md  --files ./src/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
   },
   "dependencies": {
+    "@burstjs/util": "^0.4.3",
     "bignumber.js": "^9.0.0"
   },
   "husky": {
