--- a/lib/packages/contracts/package.json
+++ b/lib/packages/contracts/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.23",
     "bili": "^4.8.1",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript2": "^0.24.2"
