--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burstjs/core",
-  "version": "0.4.3",
+  "version": "0.5.0-alpha.0",
   "description": "Burst-related functions and models for building Burstcoin applications.",
   "contributors": [
     "ohager",
@@ -47,9 +47,9 @@
     "readme": "jsdoc2md  --files ./src/**/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
   },
   "dependencies": {
-    "@burstjs/crypto": "^0.4.3",
-    "@burstjs/http": "^0.4.3",
-    "@burstjs/util": "^0.4.3"
+    "@burstjs/crypto": "^0.5.0-alpha.0",
+    "@burstjs/http": "^0.5.0-alpha.0",
+    "@burstjs/util": "^0.5.0-alpha.0"
   },
   "husky": {
     "hooks": {
