--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -47,6 +47,7 @@
     "readme": "jsdoc2md  --files ./src/**/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
   },
   "dependencies": {
+    "@burstjs/contracts": "^0.5.0-alpha.0",
     "@burstjs/crypto": "^0.5.0-alpha.0",
     "@burstjs/http": "^0.5.0-alpha.0",
     "@burstjs/util": "^0.5.0-alpha.0"
