--- a/lib/packages/contracts/package.json
+++ b/lib/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burstjs/contracts",
-  "version": "0.5.0-alpha.3",
+  "version": "0.5.0-0.5.0-beta.1.0",
   "description": "Smart Contracts package for BURST",
   "contributors": [
     "ohager"
@@ -45,7 +45,7 @@
     "readme": "jsdoc2md  --files ./src/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
   },
   "dependencies": {
-    "@burstjs/util": "^0.5.0-alpha.3",
+    "@burstjs/util": "^0.5.0-0.5.0-beta.1.0",
     "bignumber.js": "^9.0.0"
   },
   "husky": {
