--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burstjs/crypto",
-  "version": "0.5.0-alpha.3",
+  "version": "0.5.0-0.5.0-beta.1.0",
   "description": "Cryptographic functions for building Burstcoin apps.",
   "contributors": [
     "ohager",
