--- a/lib/package.json
+++ b/lib/package.json
@@ -58,5 +58,10 @@
   },
   "dependencies": {
     "axios": "^0.19.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
   }
 }
