--- a/lib/package.json
+++ b/lib/package.json
@@ -30,7 +30,7 @@
     "babel-preset-env": "^1.7.0",
     "codecov": "^3.6.1",
     "custom-tslint-formatters": "^2.4.0",
-    "husky": "^3.0.9",
+    "husky": "^3.1.0",
     "jest": "^24.1.0",
     "jsdoc-babel": "^0.5.0",
     "jsdoc-to-markdown": "^5.0.2",
@@ -38,7 +38,7 @@
     "regenerator-runtime": "^0.13.1",
     "ts-jest": "^24.0.2",
     "tslint": "^5.20.1",
-    "typedoc": "0.14.2",
+    "typedoc": "^0.16.9",
     "typedoc-plugin-external-module-name": "^2.0.0",
     "typescript": "^3.7.2"
   },
@@ -58,5 +58,10 @@
   },
   "dependencies": {
     "axios": "^0.19.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
   }
 }
