--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -76,8 +76,9 @@
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "8.2.0",
     "ngx-cookie-service": "2.2.0",
+    "ngx-currency": "^2.2.2",
     "ngx-electron": "^2.2.0",
-    "ngx-mask": "^7.9.10",
+    "ngx-mask": "^8.1.7",
     "particles.js": "^2.0.0",
     "perfect-scrollbar": "1.4.0",
     "prismjs": "1.17.1",
