--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -78,6 +78,7 @@
     "ngx-cookie-service": "2.2.0",
     "ngx-electron": "^2.2.0",
     "ngx-mask": "^7.9.10",
+    "ngx-skeleton-loader": "^1.2.6",
     "particles.js": "^2.0.0",
     "perfect-scrollbar": "1.4.0",
     "prismjs": "1.17.1",
