--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -1,6 +1,12 @@
 {
-  "name": "phoenix-angular-web-wallet",
-  "version": "1.0.0-beta.13",
+  "name": "phoenix-burstcoin-web-wallet",
+  "author": {
+    "name": "Burst Apps Team (BAT)",
+    "email": "contact@burst-coin.org"
+  },
+  "productName": "Phoenix Burstcoin Wallet",
+  "description": "The Burstcoin web wallet",
+  "version": "1.0.0-beta.14",
   "license": "GPL-3.0",
   "contributors": [
     "ohager",
