--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,10 @@ jobs:
     - stage: build
       name: "Build Desktop App"
       script: './scripts/ci/build-electron.sh'
-    - stage: desktop-deploy
+    - stage: deploy
       name: "Build and Deploy Desktop App"
       script: './scripts/ci/release-desktop.sh --publish'
-    - stage: web-deploy
+    - # parallel run
       name: "Build and Deploy Web App"
       script: './scripts/ci/build-web.sh'
       deploy:
@@ -40,20 +40,16 @@ jobs:
         api_key: $GH_TOKEN
         file: "./web/angular-wallet/web-phoenix-burst-wallet.tar.gz"
         skip_cleanup: true
-    - stage: force-deploy
-      name: "Forced Build and Deploy Desktop App"
-      script: './scripts/ci/release-desktop.sh --publish'
-    - stage: nightly-release
-      name: "Nightly Release of Desktop App"
-      script: './scripts/ci/nightly-desktop.sh'
+#    - stage: nightly-release
+#      name: "Nightly Release of Desktop App"
+#      script: './scripts/ci/nightly-desktop.sh'
 
 stages:
   - prepare
   - name: build
     if: type != cron AND tag !~ /^desktop-\d+\.\d+\.\d+/ AND branch !~ /^force-deploy/
-  - name: desktop-deploy
-    if: tag =~ /^desktop-\d+\.\d+\.\d+/
-  - name: force-deploy
-    if: branch =~ /^force-deploy/
-  - name: nightly-release
-    if: branch=develop AND type=cron
+  - name: deploy
+    # TODO: rename tag - but would affect auto updater
+    if: tag =~ /^desktop-\d+\.\d+\.\d+/- OR branch =~ /^force-deploy/
+#  - name: nightly-release
+#    if: branch=develop AND type=cron
