--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,13 @@ jobs:
       script: './scripts/ci/build-web.sh'
       deploy:
         provider: releases
-        api_key: $GH_TOKEN
+        token: $GH_TOKEN
         file: "./web/angular-wallet/web-phoenix-burst-wallet.tar.gz"
         skip_cleanup: true
+        draft: true
+        on:
+          all_branches: true
+          tags: true
 #    - stage: nightly-release
 #      name: "Nightly Release of Desktop App"
 #      script: './scripts/ci/nightly-desktop.sh'
